arquivos do meu repositório

--- a/diario_de_classe/html/anotacoes.html
+++ b/diario_de_classe/html/anotacoes.html
@@ -25,9 +25,9 @@
 				<ul>
 					<li><a href="">notas</a></li>
 					<li><a href="">turmas</a></li>
-					<li><a href="html/anotacoes.html">anotações</a></li>
-					<li><a href="">plano de aula</a></li>
-					<li><a href="">chamada</a></li>
+					<li><a href="anotacoes.html">anotações</a></li>
+					<li><a href="planoDeAula.html">plano de aula</a></li>
+					<li><a href="chamada.html">chamada</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -44,10 +44,6 @@
 					<h3>Registro de Anotações</h3>
 					<div class="anotacao col-12 row" id="anot" onclick="estenderAnotacao()">
 						<h4>data</h4>
-													Lorem ipsum ut etiam nostra congue, consequat sagittis litora aptent mauris purus, at aliquet adipiscing massa. ornare vitae integer mattis sem vestibulum consectetur accumsan etiam, condimentum per nullam fringilla odio vel eleifend placerat vestibulum, sem faucibus quisque amet purus ligula ante. elit vivamus purus pellentesque himenaeos duis aenean, ante sollicitudin at id porttitor, ut purus semper vulputate ut. sem mauris ultrices sociosqu scelerisque tortor porttitor pulvinar ac sodales, aliquam elementum quam fames rhoncus euismod proin sociosqu cubilia ac, aliquam magna tristique luctus tortor arcu facilisis aenean. primis purus litora volutpat eros donec cras accumsan at mattis nec proin, fringilla odio sollicitudin orci ultricies velit nisi praesent nostra vestibulum, curabitur nisl platea aliquam in pretium hendrerit purus hac volutpat. 
-
-	Elit diam urna ultricies cubilia porttitor auctor cras sagittis curabitur, auctor fringilla porttitor justo pulvinar faucibus pretium laoreet habitant integer, urna pellentesque quisque ut nibh etiam praesent lorem. erat non donec cursus urna tristique morbi volutpat bibendum lobortis risus, nulla class primis augue posuere himenaeos in pulvinar phasellus. tristique senectus tortor at commodo etiam feugiat purus phasellus nam auctor, purus congue curabitur per metus egestas neque vitae semper. rutrum aenean sagittis sociosqu nulla libero a nibh nec, convallis laoreet primis nunc aliquam venenatis quam, lobortis primis lacus adipiscing fermentum faucibus himenaeos. 
- 
 					</div>
 					<div class="anotacao col-12 row">
 						<h4>data</h4>
