--- a/diario_de_classe/html/planoDeAula.html
+++ b/diario_de_classe/html/planoDeAula.html
@@ -5,8 +5,9 @@
 	<title>Document</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/diarioDeClasse.css">
+	<link rel="stylesheet" type="text/css" href="../css/diarioDeClasse.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="../css/planoDeAula.css">
 </head>
 <body>
 	<div class="container-geral col-11 row">
@@ -24,15 +25,36 @@
 				<ul>
 					<li><a href="">notas</a></li>
 					<li><a href="">turmas</a></li>
-					<li><a href="">anotações</a></li>
-					<li><a href="">plano de aula</a></li>
-					<li><a href="">chamada</a></li>
+					<li><a href="anotacoes.html">anotações</a></li>
+					<li><a href="planoDeAula.html">plano de aula</a></li>
+					<li><a href="chamada.html">chamada</a></li>
 				</ul>
 			</div>
 		</nav>
 		<section class="col-12 row">
 			<div class="container-conteudo col-12 row">
-				
+				<div class="planoDeAula col-12 row">
+					<div class="cabecalhoPlanosDeAula row col-12">	
+						<header>
+							<h3>plano de aula</h3>
+						</header>
+						<form>
+							<label for="tema">tema:</label>
+							<input type="text" name="tema" id="tema" placeholder="Preencha aqui..." required="" title="Digite o tema do plano de aula.">
+							<label for="objetivo">objetivo:</label>
+							<input type="text" name="objetivo" id="objetivo" placeholder="Preencha aqui..." required="" title="Digite o objetivo do plano de aula.">
+							<label for="conteudo">conteúdo:</label>
+							<input type="text" name="conteudo" id="conteudo" placeholder="Preencha aqui..." required="" title="Digite sobre o conteúdo">
+							<label for="metodologia">metodologia de ensino:</label>
+							<input type="text" name="metodologia" id="metodologia" placeholder="Preencha aqui..." required="" title="Metodologia de ensino utilizada.">
+							<label for="recursos">Recursos necessários:</label>
+							<input type="text" name="recursos" id="recursos" placeholder="Preencha aqui..." required="" title="Recurssos que serão utilizados.">
+							<label for="referencias">referências:</label>
+							<input type="text" name="referencias" id="referencias" placeholder="Preencha aqui..." required="" title="Referências utilizadas">
+
+						</form>
+					</div>	
+				</div>
 			</div>
 		</section>
 		<footer>
