--- a/diario_de_classe/html/chamada.html
+++ b/diario_de_classe/html/chamada.html
@@ -7,7 +7,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../css/diarioDeClasse.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="../css/anotacoes.css">
 </head>
 <body>
 	<div class="container-geral col-11 row">
@@ -27,28 +26,13 @@
 					<li><a href="">turmas</a></li>
 					<li><a href="anotacoes.html">anotações</a></li>
 					<li><a href="planoDeAula.html">plano de aula</a></li>
-					<li><a href="chamada.html">chamada</a></li>
+					<li><a href="">chamada</a></li>
 				</ul>
 			</div>
 		</nav>
 		<section class="col-12 row">
 			<div class="container-conteudo col-12 row">
-				<div class="insercao-anotacao col-12 row">
-					<form>
-							<label for="info">Anotação:</label><br>
-							<textarea id="info"></textarea><br>
-							<button type="submit" title="Salvar Anotação">Salvar</button>
-					</form>
-				</div>
-				<div class="anotacoesSalvas col-12 row">
-					<h3>Registro de Anotações</h3>
-					<div class="anotacao col-12 row" id="anot" onclick="estenderAnotacao()">
-						<h4>data</h4>
-					</div>
-					<div class="anotacao col-12 row">
-						<h4>data</h4>
-					</div>
-				</div>
+				
 			</div>
 		</section>
 		<footer>
@@ -58,6 +42,6 @@
 			</div>
 		</footer>
 	</div>
-	<script type="text/javascript" src="../js/diario_de_classe.js"></script>
+	<script type="text/javascript" src="js/diario_de_classe.js"></script>
 </body>
 </html>
