--- a/diario_de_classe/html/anotacoes.html
+++ b/diario_de_classe/html/anotacoes.html
@@ -23,8 +23,8 @@
 			</div>
 			<div class="menu col-12 row" id="menu-cel">
 				<ul>
-					<li><a href="">notas</a></li>
-					<li><a href="">turmas</a></li>
+					<li><a href="notas.html">notas</a></li>
+					<li><a href="turmas.html">turmas</a></li>
 					<li><a href="anotacoes.html">anotações</a></li>
 					<li><a href="planoDeAula.html">plano de aula</a></li>
 					<li><a href="chamada.html">chamada</a></li>
