--- a/diario_de_classe/index.html
+++ b/diario_de_classe/index.html
@@ -22,11 +22,11 @@
 			</div>
 			<div class="menu col-12 row" id="menu-cel">
 				<ul>
-					<li><a href="">notas</a></li>
-					<li><a href="">turmas</a></li>
+					<li><a href="html/notas.html">notas</a></li>
+					<li><a href="html/turmas.html">turmas</a></li>
 					<li><a href="html/anotacoes.html">anotações</a></li>
-					<li><a href="">plano de aula</a></li>
-					<li><a href="">chamada</a></li>
+					<li><a href="html/planoDeAula.html">plano de aula</a></li>
+					<li><a href="html/chamada.html">chamada</a></li>
 				</ul>
 			</div>
 		</nav>
