--- a/diario_de_classe/index.html
+++ b/diario_de_classe/index.html
@@ -18,9 +18,9 @@
 		<nav>
 			<div onclick="botaoMenu()" class="menu-para-celular col-12 row">
 				<h2>menu</h2>
-				<i class="fas fa-ellipsis-v"></i>
+				<i class="fas fa-bars"></i>
 			</div>
-			<div class="menu col-12 row" id="menu-cel">
+			<div class="menu col-12 row botaoesconder" id="menu-cel">
 				<ul>
 					<li><a href="html/notas.html">notas</a></li>
 					<li><a href="html/turmas.html">turmas</a></li>
