--- a/diario_de_classe/html/chamada.html
+++ b/diario_de_classe/html/chamada.html
@@ -18,7 +18,7 @@
 		<nav>
 			<div onclick="botaoMenu()" class="menu-para-celular col-12 row">
 				<h2>menu</h2>
-				<i class="fas fa-ellipsis-v"></i>
+				<i class="fas fa-bars"></i>
 			</div>
 			<div class="menu col-12 row" id="menu-cel">
 				<ul>
@@ -42,6 +42,6 @@
 			</div>
 		</footer>
 	</div>
-	<script type="text/javascript" src="js/diario_de_classe.js"></script>
+	<script type="text/javascript" src="../js/diario_de_classe.js"></script>
 </body>
 </html>
