--- a/diario_de_classe/html/planoDeAula.html
+++ b/diario_de_classe/html/planoDeAula.html
@@ -19,7 +19,7 @@
 		<nav>
 			<div onclick="botaoMenu()" class="menu-para-celular col-12 row">
 				<h2>menu</h2>
-				<i class="fas fa-ellipsis-v"></i>
+				<i class="fas fa-bars"></i>
 			</div>
 			<div class="menu col-12 row" id="menu-cel">
 				<ul>
@@ -33,11 +33,11 @@
 		</nav>
 		<section class="col-12 row">
 			<div class="container-conteudo col-12 row">
-				<div class="botoes-plano-de-aula col-12 row">
+				<div class="botoes-plano-de-aula col-12 row" onclick="botaoPlanosDeAula()">
 					<i class="fas fa-pencil-alt" title="Adicionar Plano de Aula."></i>
-					<h3>Adicionar</h3>
+					<h3 title="Adicionar Plano de Aula.">Adicionar</h3>
 				</div>
-				<div class="planoDeAula col-12 row">
+				<div class="planoDeAula col-12 row botaoesconder" id="planosDeAula">
 					<div class="cabecalhoPlanosDeAula row col-12">	
 						<form>
 							<label for="tema">tema:</label>
@@ -70,6 +70,6 @@
 			</div>
 		</footer>
 	</div>
-	<script type="text/javascript" src="js/diario_de_classe.js"></script>
+	<script type="text/javascript" src="../js/diario_de_classe.js"></script>
 </body>
 </html>
