--- a/diario_de_classe/html/anotacoes.html
+++ b/diario_de_classe/html/anotacoes.html
@@ -35,7 +35,7 @@
 			<div class="container-conteudo col-12 row">
 				<div class="botoes-anotacoes col-12 row" onclick="botaoanotacoes()">
 					<i class="fas fa-pencil-alt" title="Adicionar Plano de Aula."></i>
-					<h3 title="Adicionar Plano de Aula.">Adicionar</h3>
+					<h3 title="Adicionar Plano de Aula." id="adicionar">Adicionar</h3>
 				</div>
 				<div class="insercao-anotacao col-12 row" id="idAnotacao">
 					<form>
