--- a/diario_de_classe/html/planoDeAula.html
+++ b/diario_de_classe/html/planoDeAula.html
@@ -35,7 +35,7 @@
 			<div class="container-conteudo col-12 row">
 				<div class="botoes-plano-de-aula col-12 row" onclick="botaoPlanosDeAula()">
 					<i class="fas fa-pencil-alt" title="Adicionar Plano de Aula."></i>
-					<h3 title="Adicionar Plano de Aula.">Adicionar</h3>
+					<h3 title="Adicionar Plano de Aula." id="adicionar">Adicionar</h3>
 				</div>
 				<div class="planoDeAula col-12 row botaoesconder" id="planosDeAula">
 					<div class="cabecalhoPlanosDeAula row col-12">	
