--- a/diario_de_classe/html/planoDeAula.html
+++ b/diario_de_classe/html/planoDeAula.html
@@ -33,7 +33,7 @@
 		</nav>
 		<section class="col-12 row">
 			<div class="container-conteudo col-12 row">
-				<div class="botoes-plano-de-aula col-12 row" onclick="botaoPlanosDeAula()">
+				<div class="botao col-12 row" onclick="botaoPlanosDeAula()">
 					<i class="fas fa-pencil-alt" title="Adicionar Plano de Aula."></i>
 					<h3 title="Adicionar Plano de Aula." id="adicionar">Adicionar</h3>
 				</div>
