--- a/diario_de_classe/html/anotacoes.html
+++ b/diario_de_classe/html/anotacoes.html
@@ -33,7 +33,7 @@
 		</nav>
 		<section class="col-12 row">
 			<div class="container-conteudo col-12 row">
-				<div class="botoes-anotacoes col-12 row" onclick="botaoanotacoes()">
+				<div class="botao col-12 row" onclick="botaoanotacoes()">
 					<i class="fas fa-pencil-alt" title="Adicionar Plano de Aula."></i>
 					<h3 title="Adicionar Plano de Aula." id="adicionar">Adicionar</h3>
 				</div>
@@ -41,22 +41,19 @@
 					<form>
 							<label for="info">Anotação:</label><br>
 							<textarea id="info"></textarea><br>
-							<button type="submit" title="Salvar Anotação">Salvar</button>
+							<button onclick="salvarAnotacao(), botaoanotacoes()" type="button" title="Salvar Anotação">Salvar</button>
 					</form>
 				</div>
-				<div class="anotacoesSalvas col-12 row">
+				<div class="anotacoesSalvas col-12 row" id="idAnotacoesSalvas">
 					<h3>Registro de Anotações</h3>
-					<div class="anotacao col-12 row" id="anot" onclick="estenderAnotacao()">
+					<!-- <div class="anotacao col-12 row" id="anot" onclick="estenderAnotacao()">
 						<h4>data</h4>
-					</div>
-					<div class="anotacao col-12 row">
-						<h4>data</h4>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
 		<footer>
-			<div class="rodape col-12 row">
+			<div class="rodape col-12 row" id="rodapee">
 				<p>Desenvolvido por: Robson Alves Moreira Pires.</p>
 				<p>robson.amp@outlook.com</p>
 			</div>
