--- a/diario_de_classe/html/planoDeAula.html
+++ b/diario_de_classe/html/planoDeAula.html
@@ -40,6 +40,14 @@
 				<div class="planoDeAula col-12 row botaoesconder" id="planosDeAula">
 					<div class="cabecalhoPlanosDeAula row col-12">	
 						<form>
+							<label>turma:</label>
+							<select id="turmas">
+								<option></option>
+								<option>turmaA</option>
+								<option>turmaB</option>
+								<option>turmaC</option>
+								<option>turmaD</option>
+							</select>
 							<label for="tema">tema:</label>
 							<input type="text" name="tema" id="tema" placeholder="Preencha aqui..." required="" title="Digite o tema do plano de aula.">
 							<label for="objetivo">objetivo:</label>
