--- a/diario_de_classe/html/anotacoes.html
+++ b/diario_de_classe/html/anotacoes.html
@@ -14,6 +14,7 @@
 		<header>
 			<div class="cabecalho col-12 row">
 				<h1>diário de classe</h1>
+				<a href="../index.html"><i class="fas fa-sign-out-alt" title="sair"></i></a>
 			</div>
 		</header>
 		<nav>
