--- a/diario_de_classe/html/planoDeAula.html
+++ b/diario_de_classe/html/planoDeAula.html
@@ -14,6 +14,7 @@
 		<header>
 			<div class="cabecalho col-12 row">
 				<h1>diário de classe</h1>
+				<a href="../index.html"><i class="fas fa-sign-out-alt" title="sair"></i></a>
 			</div>
 		</header>
 		<nav>
@@ -40,14 +41,6 @@
 				<div class="planoDeAula col-12 row botaoesconder" id="planosDeAula">
 					<div class="cabecalhoPlanosDeAula row col-12">	
 						<form>
-							<label>turma:</label>
-							<select id="turmas">
-								<option></option>
-								<option>turmaA</option>
-								<option>turmaB</option>
-								<option>turmaC</option>
-								<option>turmaD</option>
-							</select>
 							<label for="tema">tema:</label>
 							<input type="text" name="tema" id="tema" placeholder="Preencha aqui..." required="" title="Digite o tema do plano de aula.">
 							<label for="objetivo">objetivo:</label>
