--- a/diario_de_classe/index.html
+++ b/diario_de_classe/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/diarioDeClasse.css">
+	<link rel="stylesheet" type="text/css" href="css/login.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
@@ -15,24 +16,19 @@
 				<h1>diário de classe</h1>
 			</div>
 		</header>
-		<nav>
-			<div onclick="botaoMenu()" class="menu-para-celular col-12 row">
-				<h2>menu</h2>
-				<i class="fas fa-bars"></i>
-			</div>
-			<div class="menu col-12 row botaoesconder" id="menu-cel">
-				<ul>
-					<li><a href="html/notas.html">notas</a></li>
-					<li><a href="html/turmas.html">turmas</a></li>
-					<li><a href="html/anotacoes.html">anotações</a></li>
-					<li><a href="html/planoDeAula.html">plano de aula</a></li>
-					<li><a href="html/chamada.html">chamada</a></li>
-				</ul>
-			</div>
-		</nav>
 		<section class="col-12 row">
 			<div class="container-conteudo col-12 row">
-				
+				<div class="container-login row col-5">
+					<h1>logar</h1>
+					<form>
+						<label for="usuario" title="usuário..." ><i style="" class="fas fa-user"></i></label>
+						<input title="Digite nome de seu usuário..." type="text" placeholder="Digite seu nome de usuário..." id="usuario" autofocus="" required>
+						<label for="senha" title="senha..." ><i class="fas fa-key"></i></label>
+						<input title="Digite sua senha..." type="password" placeholder="Digite sua senha..." id="senha" required>
+						<button type="submit" title="clique para acessar" class="botao-login">entrar</button>
+					</form>
+					<p><a href="" title="cadastrar novo usuário">cadastrar</a> ou <a href="" title="recuperar senha">recuperar senha</a></p>
+				</div>
 			</div>
 		</section>
 		<footer>
