--- a/diario_de_classe/html/anotacoes.html
+++ b/diario_de_classe/html/anotacoes.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="sortcut icon" href="img/favicon.ico.png" type="image/png" />;
 	<link rel="stylesheet" type="text/css" href="../css/diarioDeClasse.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="../css/anotacoes.css">
@@ -20,13 +21,17 @@
 		<nav>
 			<div onclick="botaoMenu()" class="menu-para-celular col-12 row">
 				<h2>menu</h2>
-				<i class="fas fa-bars"></i>
+				<div class="menu-bar" onclick="transformarIcone()">
+					<div class="barra-superior" id="superior"></div>
+					<div class="barra-central"  id="centro"></div>
+					<div class="barra-inferior" id="inferior"></div>	
+				</div>
 			</div>
 			<div class="menu col-12 row" id="menu-cel">
 				<ul>
 					<li><a href="notas.html">notas</a></li>
 					<li><a href="turmas.html">turmas</a></li>
-					<li><a href="anotacoes.html">anotações</a></li>
+					<li class="filho3"><a href="anotacoes.html">anotações</a></li>
 					<li><a href="planoDeAula.html">plano de aula</a></li>
 					<li><a href="chamada.html">chamada</a></li>
 				</ul>
@@ -35,14 +40,14 @@
 		<section class="col-12 row">
 			<div class="container-conteudo col-12 row">
 				<div class="botao col-12 row" onclick="botaoanotacoes()">
-					<i class="fas fa-pencil-alt" title="Adicionar Plano de Aula."></i>
-					<h3 title="Adicionar Plano de Aula." id="adicionar">Adicionar</h3>
+					<i class="fas fa-pencil-alt" title="Adicionar anotação."></i>
+					<h3 title="Adicionar anotação." id="adicionar">Adicionar Anotação</h3>
 				</div>
 				<div class="insercao-anotacao col-12 row" id="idAnotacao">
-					<form>
+					<form  action="../dao/anotacaoDAO.php" method="post">
 							<label for="info">Anotação:</label><br>
-							<textarea id="info"></textarea><br>
-							<button onclick="salvarAnotacao(), botaoanotacoes()" type="button" title="Salvar Anotação">Salvar</button>
+							<textarea id="info" name=""></textarea><br>
+							<button onclick="salvarAnotacao(), botaoanotacoes()" type="submit" title="Salvar Anotação">Salvar</button>
 					</form>
 				</div>
 				<div class="anotacoesSalvas col-12 row" id="idAnotacoesSalvas">
