--- a/diario_de_classe/html/chamada.html
+++ b/diario_de_classe/html/chamada.html
@@ -19,7 +19,11 @@
 		<nav>
 			<div onclick="botaoMenu()" class="menu-para-celular col-12 row">
 				<h2>menu</h2>
-				<i class="fas fa-bars"></i>
+				<div class="menu-bar" onclick="transformarIcone()">
+					<div class="barra-superior" id="superior"></div>
+					<div class="barra-central"  id="centro"></div>
+					<div class="barra-inferior" id="inferior"></div>	
+				</div>
 			</div>
 			<div class="menu col-12 row" id="menu-cel">
 				<ul>
@@ -27,7 +31,7 @@
 					<li><a href="turmas.html">turmas</a></li>
 					<li><a href="anotacoes.html">anotações</a></li>
 					<li><a href="planoDeAula.html">plano de aula</a></li>
-					<li><a href="chamada.html">chamada</a></li>
+					<li class="filho5"><a href="chamada.html">chamada</a></li>
 				</ul>
 			</div>
 		</nav>
