--- a/diario_de_classe/html/planoDeAula.html
+++ b/diario_de_classe/html/planoDeAula.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
@@ -20,14 +20,18 @@
 		<nav>
 			<div onclick="botaoMenu()" class="menu-para-celular col-12 row">
 				<h2>menu</h2>
-				<i class="fas fa-bars"></i>
+				<div class="menu-bar" onclick="transformarIcone()">
+					<div class="barra-superior" id="superior"></div>
+					<div class="barra-central"  id="centro"></div>
+					<div class="barra-inferior" id="inferior"></div>	
+				</div>
 			</div>
 			<div class="menu col-12 row" id="menu-cel">
 				<ul>
 					<li><a href="notas.html">notas</a></li>
 					<li><a href="turmas.html">turmas</a></li>
 					<li><a href="anotacoes.html">anotações</a></li>
-					<li><a href="planoDeAula.html">plano de aula</a></li>
+					<li class="filho4"><a href="planoDeAula.html">plano de aula</a></li>
 					<li><a href="chamada.html">chamada</a></li>
 				</ul>
 			</div>
@@ -41,6 +45,13 @@
 				<div class="planoDeAula col-12 row botaoesconder" id="planosDeAula">
 					<div class="cabecalhoPlanosDeAula row col-12">	
 						<form>
+							<label for="turma">turma:</label>
+							<select id="turma" id="turma" name="turma" required="" title="selecione a turma">
+								<option>SELECIONE</option>
+								<option id="idturma">TurmaA</option>
+								<option id="idturma">TurmaA</option>
+								<option id="idturma">TurmaA</option>
+							</select>
 							<label for="tema">tema:</label>
 							<input type="text" name="tema" id="tema" placeholder="Preencha aqui..." required="" title="Digite o tema do plano de aula.">
 							<label for="objetivo">objetivo:</label>
