--- a/diario_de_classe/html/turmas.html
+++ b/diario_de_classe/html/turmas.html
@@ -43,18 +43,18 @@
 					<h3 title="Adicionar Plano de Aula." id="adicionar">Adicionar Turma</h3>
 				</div>
 				<div class="insercao-turma row col-12" id="insercaoTurma">
-					<form>
+					<form action="../dao/tbTurma.php" method="post">
 						<label for="nome-turma">nome da turma:</label>
-						<input type="text" name="nome-turma" id="nome-turma" placeholder="Preencha aqui..." title="Digite o nome da Turma">
+						<input type="text" name="tb_turma_nome" id="nome-turma" placeholder="Preencha aqui..." title="Digite o nome da Turma">
 						<label for="serie-turma">serie:</label>
-						<input type="text" name="serie-turma" id="serie-turma" placeholder="Preencha aqui..." title="Digite a Série da turma">
+						<input type="text" name="tb_turma_serie" id="serie-turma" placeholder="Preencha aqui..." title="Digite a Série da turma">
+						<label for="id_periodo">periodo:</label>
+						<input type="texte" name="tb_turma_periodo" id="id_periodo">
 						<label for="qtd-alunos">quantidade de alunos:</label>
-						<input type="number" min="1" max="100" name="qtd-alunos" id="qtd-alunos" placeholder="Preencha aqui..." title="Selecione a Quantidade de Alunos.">
+						<input type="number" min="1" max="100" name="tb_turma_qtd_alunos" id="qtd-alunos" placeholder="Preencha aqui..." title="Selecione a Quantidade de Alunos.">
 						<label for="disciplina-turma">disciplina ministrada:</label>
-						<input type="text" name="disciplina-turma" id="disciplina-turma" placeholder="Preencha aqui..." title="">
+						<input type="text" name="tb_turma_disciplina_ministrada" id="disciplina-turma" placeholder="Preencha aqui..." title="">
 						<button type="submit" title="Salvar Cadastro de Turma.">Enviar</button>
-						<!-- <label for=""></label>
-						<input type="" name="" id="" placeholder="Preencha aqui..." title=""> -->
 					</form>
 				</div>
 				<div class="turmas col-12 row">
